--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
 <!-- 탭 -->
     <ul class="tabs">
       <li class="on"><a href="#none">인사말</a> </li>
-      <li><a href="#none">기관연혁</a></li>
-      <li><a href="#none">운영이념</a></li>
-      <li><a href="#none">주요사업</a></li>
+      <li><a href="#none">할인안내</a></li>
+      <li><a href="#none">공지사항</a></li>
+      <li><a href="#none">주차안내</a></li>
     </ul>
 
     <div class="tab_con on">
